20180418	Adding dummy skeletons for a Cyclone/VH (i960VH) evaluation
		board, and the HP 700/RX X-terminal (i960CA).
20180419	Implementing basic disassembly of some i960 instructions
		(only the CTRL group so far), and basic register dump
		functionality.
20180420	i960 MEM and COBR instruction group disassembly has now
		been implemented.
20180422	Adding a simple b.out file loader for i960 binaries, but
		no support for symbols yet.
		Beginning to add some REG instruction disassembly (i960).
20180423	Implementing the rest of i960CA REG instruction disasm.
20180424	Beginning to implement i960 dyntrans instructions (a simple
		'b' branch and a simple 'mov lit,reg' so far).
20180428	Implementing happy case of an "lda" i960 instruction which has
		an extra displacement word, i.e. non-standard dyntrans
		instruction length.
20180503	Implementing i960 lda with immediate 12-bit offset, and
		dummy (nop) sysctl cache invalidation (msg type 0x01).
20180613	Fixing an old TODO for invalidating translation caches when
		using non-4KB pages for MIPS. This makes HelenOS 0.7.1/malta
		boot further than before.
20180614	Removing an old TODO regarding MIPS count/compare interrupts;
		this causes HelenOS on Malta to run much faster (while
		NetBSD/evbmips (malta) and /cobalt are not worse off than
		before).
		Updating NetBSD/evmbips and /cobalt installation instructions
		to 7.1.2 (with a note about clock not being correct).
		More work on the other-than-4KB bug fix.
20180618	Doubling DEFAULT_DYNTRANS_CACHE_SIZE from 48 to 96 MB.
		Updating more NetBSD install instructions to 7.1.2.
20180619	When reading disk sectors from the 'disk' device (for e.g.
		testmips), automatically move to the next sector after
		reading (or writing).
		Allow testmips programs to detect whether the X11 framebuffer
		is in use or not (returns 0x0 as resolution if not).
20180706	Adding a dummy VoCore machine skeleton using the old framework
		(with the wrong CPU type 4KEc instead of 24K).